Feat : 사진 삭제 구현

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name="com.example.fitnutrijournal.utils.PhotoViewActivity" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.fileprovider"
