Style : Splash 화면 수정

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,17 +49,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.example.fitnutrijournal.ui.main.MainActivity" />
+        <activity android:name="com.example.fitnutrijournal.ui.main.MainActivity"
+            android:theme="@style/AppTheme"/>
 
-<!--        <activity-->
-<!--            android:name="com.example.fitnutrijournal.ui.main.MainActivity"-->
-<!--            android:theme="@style/AppTheme"-->
-<!--            android:exported="true" >-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
+
 
         <activity
             android:name="com.example.fitnutrijournal.utils.PhotoViewActivity" />
